[package]
name = "screen_edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.2.0-rc2"
anyhow = "1.0.81"
lazy_static = "1.4.0"
rdev = "0.5.3"
log = "0.4.21"
env_logger = "0.11.3"
window_inspector = { git = "https://github.com/enximi/window_inspector" }
tokio = { version = "1.36.0", features = ["full"] }
